--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f039e122290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7110bbc410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f039e3f6090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f039e3f6290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7110e8aed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7110eb1110&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f039e9a1990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f039e9a1b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f711144f7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f711144f9d0&gt;]</pre>
 </div>
 
 </div>
