--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1371a5e990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff721508d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1371a270d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1371a272d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff721ab7750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff721ac4210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1371fc3a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1371fc3c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7220c7e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff722060b10&gt;]</pre>
 </div>
 
 </div>
