--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85f298b110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f997bb6d490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85f2c8e150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85f2c8e350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f997bb7b1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f997b847410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85f322ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85f322bc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f997b857510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f997bde6d90&gt;]</pre>
 </div>
 
 </div>
