--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd029412750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11796c86d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0290f0150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0290f0350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11793aa0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11793aa2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd02968db50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd02968dd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1179946a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1179946c10&gt;]</pre>
 </div>
 
 </div>
