--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa01cee4b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23690f9cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa01cba1fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa01cbd3210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2362d93fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2362dc0210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa01d170950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa01d170b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f236335e910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f236335eb10&gt;]</pre>
 </div>
 
 </div>
