--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f001100bd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e6efa5d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00115e60d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00115e62d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e6ec7c210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e6ec7c450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0011b94a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0011b94c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e6f22ca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e6f22ccd0&gt;]</pre>
 </div>
 
 </div>
