--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47f30906d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb8175f34d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f47f2d7b1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f47f2d7b3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8178bf210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb8178bf410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f47f3319b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f47f3319d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb817e6dad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb817e6dcd0&gt;]</pre>
 </div>
 
 </div>
