--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56e586c650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce7a451a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56e5b79490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56e5b79690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce7a40b390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce7a40b590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56e611cd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56e611cf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce7a9bebd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce7a9bedd0&gt;]</pre>
 </div>
 
 </div>
