--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa146f47c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e2b397b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa146c13210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa146c13410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e2b08e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e2b08e350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1471c6b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1471c6d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e2b624b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3e2b624d10&gt;]</pre>
 </div>
 
 </div>
