--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8f16db310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcda969d550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8f19c8210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8f19c8410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcda93610d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcda93612d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8f1f69a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8f1f69c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcda9910a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcda9910c10&gt;]</pre>
 </div>
 
 </div>
