--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ab5c08f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50bedf4750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab5f20190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ab5f20390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50bf0e1f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50bf1131d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab64baad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ab64bacd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50bf6b0950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50bf6b0b90&gt;]</pre>
 </div>
 
 </div>
