--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50bedf4750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48cae3a210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50bf0e1f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50bf1131d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48cab04050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48cab04250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50bf6b0950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50bf6b0b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48cb0b2950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48cb0b2b50&gt;]</pre>
 </div>
 
 </div>
