--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0accd968d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33dec9db10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0acca4f250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0acca68510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f33df256090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f33df256290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0acd00eb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0acd018e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f33df7f3990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f33df7f3b90&gt;]</pre>
 </div>
 
 </div>
