--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33dec9db10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc9e1f0c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f33df256090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f33df256290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc9dedb110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc9dedb310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f33df7f3990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f33df7f3b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc9e48aa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc9e48ac50&gt;]</pre>
 </div>
 
 </div>
