--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc9e1f0c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ddc1f6fd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc9dedb110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc9dedb310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ddbed3250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ddbeaa150&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc9e48aa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc9e48ac50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ddc477b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ddc46ca50&gt;]</pre>
 </div>
 
 </div>
