--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ddc1f6fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda21eceb10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ddbed3250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ddbeaa150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda221a2110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda221a2310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ddc477b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ddc46ca50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda2274da10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda2274dc10&gt;]</pre>
 </div>
 
 </div>
