--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8548098910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0260da9f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8547d71810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8547d664d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02610581d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f026108e2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85483050d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8548317d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0261620a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f026162ab90&gt;]</pre>
 </div>
 
 </div>
