--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f283ed01cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8116c9a5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f283f29bf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f283f2cf1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8116966350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8116966550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f283f86a950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f283f86ab50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8116f18c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8116f18e50&gt;]</pre>
 </div>
 
 </div>
