--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4dbca8ba50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4a89002e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4dbca7e150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4dbca7e350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a88f8ded0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a88fca110&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4dbd01aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4dbd01ac90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a89563810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a89563a10&gt;]</pre>
 </div>
 
 </div>
