--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f832aa9f450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90fb66f790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f832ad6ee90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f832ad940d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90fb637110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90fb637310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f832b33f810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f832b33fa10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f90fbbd5a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f90fbbd5c10&gt;]</pre>
 </div>
 
 </div>
