--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff46ca77a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3755913a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff46ca09f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff46ca381d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3755bf9d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3755be83d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff46cfcf910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff46cfcfb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f375618f610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3756199c50&gt;]</pre>
 </div>
 
 </div>
